tests/pass/array_set_basic.lum
a = [1, 2, 3]
a[1] = 10
__emit(a, true, false)
