tests/fail/array_push_non_array.lum
x = 10
__push(x, 1)
